// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-user-group should create a user group 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`create-user-group should create a user group 2`] = `
[
  {
    "alias": "testUserGroupCreated",
    "aliasCanBeChanged": true,
    "documentRootAccess": false,
    "documentStartNode": null,
    "fallbackPermissions": [],
    "hasAccessToAllLanguages": true,
    "icon": null,
    "id": "NORMALIZED_ID",
    "isDeletable": true,
    "languages": [],
    "mediaRootAccess": false,
    "mediaStartNode": null,
    "name": "_Test User Group Created",
    "permissions": [],
    "sections": [
      "Umb.Section.Content",
    ],
  },
]
`;

exports[`create-user-group should handle existing user group 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 409",
      "type": "text",
    },
  ],
}
`;
